--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ font-family: 'Fraunces', serif; */
 
 .header {
     height: 600px;
-    background-image: url("/images/desktop/image-header.jpg");
+    background-image: url("./images/desktop/image-header.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
